fix horizontal scroll bar
Remove horizontal scroll bar showing up in narow window

--- a/RecommendedAndroidApp/css/card.css
+++ b/RecommendedAndroidApp/css/card.css
@@ -2,7 +2,7 @@
 section{
 	width:98%;
 	height:95%;
-	padding:10px 10px 10px 10px;
+	margin-left:10px;
 }
 #applicationCardContainer{
 	display:block;
